--- a/mapping_rules_v2.4.json
+++ b/mapping_rules_v2.4.json
@@ -1,219 +1,244 @@
 {
   "namespace": "http://samsung.com/project-logistics#",
+  "version": "2.4",
   "class_mappings": {
-    "BL": "BillOfLading",
-    "Cargo": "CargoItem",
-    "Port": "Port",
-    "HSCode": "HSCode",
-    "FreightContract": "FreightContract",
-    "Warehouse": "Warehouse",
-    "CustomsEntry": "CustomsEntry",
-    "eDASDeclaration": "eDASDeclaration",
     "TransportEvent": "TransportEvent",
-    "Case": "Case",
     "StockSnapshot": "StockSnapshot",
-    "DeadStock": "DeadStock",
-    "Site": "Site"
+    "Warehouse": "Warehouse",
+    "IndoorWarehouse": "IndoorWarehouse",
+    "OutdoorWarehouse": "OutdoorWarehouse",
+    "DangerousCargoWarehouse": "DangerousCargoWarehouse",
+    "Site": "Site",
+    "Case": "Case"
   },
   "property_mappings": {
-    "BL_NUMBER": {
-      "subject_class": "BillOfLading",
-      "predicate": "blNumber",
-      "type": "xsd:string"
-    },
-    "ORIGIN_PORT": {
-      "subject_class": "BillOfLading",
-      "predicate": "originPort",
-      "object_class": "Port"
-    },
-    "DEST_PORT": {
-      "subject_class": "BillOfLading",
-      "predicate": "destinationPort",
-      "object_class": "Port"
-    },
-    "SHIP_DATE": {
-      "subject_class": "BillOfLading",
-      "predicate": "shipmentDate",
-      "type": "xsd:date"
-    },
-    "TOTAL_TEU": {
-      "subject_class": "BillOfLading",
-      "predicate": "totalTEU",
-      "type": "xsd:decimal"
-    },
-    "OOG_FLAG": {
-      "subject_class": "CargoItem",
-      "predicate": "isOOG",
-      "type": "xsd:boolean",
-      "transform": {
-        "Y": true,
-        "N": false
-      }
-    },
-    "HS_CODE": {
-      "subject_class": "CargoItem",
-      "predicate": "hasHSCode",
-      "object_class": "HSCode"
-    },
-    "WAREHOUSE_CODE": {
-      "subject_class": "CargoItem",
-      "predicate": "storedIn",
-      "object_class": "Warehouse"
-    },
-    "FREIGHT_VENDOR": {
-      "subject_class": "FreightContract",
-      "predicate": "contractor",
-      "type": "xsd:string"
-    },
-    "FREIGHT_RATE": {
-      "subject_class": "FreightContract",
-      "predicate": "freightRate",
-      "type": "xsd:decimal"
-    },
-    "INCOTERM": {
-      "subject_class": "FreightContract",
-      "predicate": "hasIncoterm",
-      "type": "xsd:string"
-    },
     "Case_No": {
-      "subject_class": "TransportEvent",
-      "predicate": "belongsToCase",
-      "object_class": "Case"
-    },
-    "Tx_ID": {
-      "subject_class": "TransportEvent",
-      "predicate": "eventId",
-      "type": "xsd:string"
-    },
-    "TxType": {
-      "subject_class": "TransportEvent",
-      "predicate": "eventType",
-      "type": "xsd:string"
-    },
-    "TxType_Refined": {
-      "subject_class": "TransportEvent",
-      "predicate": "eventType",
-      "type": "xsd:string"
+      "predicate": "hasCase",
+      "datatype": "xsd:string"
     },
     "Date": {
-      "subject_class": "TransportEvent",
-      "predicate": "eventDateTime",
-      "type": "xsd:dateTime"
+      "predicate": "hasDate",
+      "datatype": "xsd:dateTime"
     },
-    "Loc_From": {
-      "subject_class": "TransportEvent",
-      "predicate": "sourceLocation",
-      "object_class": "Warehouse"
+    "Qty": {
+      "predicate": "hasQuantity",
+      "datatype": "xsd:integer"
     },
-    "Loc_To": {
-      "subject_class": "TransportEvent",
-      "predicate": "targetLocation",
-      "object_class": "Warehouse"
+    "Location": {
+      "predicate": "hasLocation",
+      "datatype": "xsd:string"
     },
-    "Site": {
-      "subject_class": "TransportEvent",
-      "predicate": "toSite",
-      "object_class": "Site"
+    "TxType_Refined": {
+      "predicate": "hasTransactionType",
+      "datatype": "xsd:string"
     },
-    "EVENT_TYPE": {
-      "subject_class": "TransportEvent",
-      "predicate": "eventType",
-      "type": "xsd:string"
+    "Status_Current": {
+      "predicate": "hasCurrentStatus",
+      "datatype": "xsd:string"
     },
-    "EVENT_DATETIME": {
-      "subject_class": "TransportEvent",
-      "predicate": "eventDateTime",
-      "type": "xsd:dateTime"
-    },
-    "BOE_NO": {
-      "subject_class": "CustomsEntry",
-      "predicate": "boeNumber",
-      "type": "xsd:string"
-    },
-    "EDAS_NO": {
-      "subject_class": "eDASDeclaration",
-      "predicate": "edasNumber",
-      "type": "xsd:string"
-    },
-    "EDAS_DATE": {
-      "subject_class": "eDASDeclaration",
-      "predicate": "declaredDate",
-      "type": "xsd:date"
-    },
-    "Inbound_Qty": {
-      "subject_class": "StockSnapshot",
-      "predicate": "inboundQty",
-      "type": "xsd:decimal"
-    },
-    "Outbound_Qty": {
-      "subject_class": "StockSnapshot",
-      "predicate": "outboundQty",
-      "type": "xsd:decimal"
-    },
-    "Inbound": {
-      "subject_class": "StockSnapshot",
-      "predicate": "inboundQty",
-      "type": "xsd:decimal"
-    },
-    "Transfer_Out": {
-      "subject_class": "StockSnapshot",
-      "predicate": "transferOutQty",
-      "type": "xsd:decimal"
-    },
-    "Final_Out": {
-      "subject_class": "StockSnapshot",
-      "predicate": "finalOutQty",
-      "type": "xsd:decimal"
-    },
-    "Opening_Stock": {
-      "subject_class": "StockSnapshot",
-      "predicate": "openingStock",
-      "type": "xsd:decimal"
-    },
-    "Closing_Stock": {
-      "subject_class": "StockSnapshot",
-      "predicate": "closingStock",
-      "type": "xsd:decimal"
-    },
-    "Date_Snapshot": {
-      "subject_class": "StockSnapshot",
-      "predicate": "snapshotDate",
-      "type": "xsd:date"
-    },
-    "Monthly_Inbound": {
-      "subject_class": "StockSnapshot",
-      "predicate": "monthlyInboundQty",
-      "type": "xsd:decimal"
-    },
-    "Monthly_Outbound": {
-      "subject_class": "StockSnapshot",
-      "predicate": "monthlyOutboundQty",
-      "type": "xsd:decimal"
-    },
-    "Inbound_Count": {
-      "subject_class": "StockSnapshot",
-      "predicate": "inboundCount",
-      "type": "xsd:int"
-    },
-    "Outbound_Count": {
-      "subject_class": "StockSnapshot",
-      "predicate": "outboundCount",
-      "type": "xsd:int"
-    },
-    "Cumulative_Stock": {
-      "subject_class": "StockSnapshot",
-      "predicate": "cumulativeStock",
-      "type": "xsd:decimal"
-    },
-    "Delivered_Count": {
-      "subject_class": "StockSnapshot",
-      "predicate": "deliveredCount",
-      "type": "xsd:int"
-    },
-    "Days_Since_Last_Move": {
-      "subject_class": "DeadStock",
-      "predicate": "inactiveDays",
-      "type": "xsd:int"
+    "Status_Storage": {
+      "predicate": "hasStorageType",
+      "datatype": "xsd:string"
     }
+  },
+  "warehouse_classification": {
+    "Indoor": [
+      "DSV Indoor",
+      "DSV Al Markaz",
+      "Hauler Indoor"
+    ],
+    "Outdoor": [
+      "DSV Outdoor",
+      "DSV MZP",
+      "MOSB"
+    ],
+    "Site": [
+      "AGI",
+      "DAS",
+      "MIR",
+      "SHU"
+    ],
+    "dangerous_cargo": [
+      "AAA Storage",
+      "Dangerous Storage"
+    ]
+  },
+  "excel_column_mappings": {
+    "case_columns": [
+      "Case No",
+      "Case_No",
+      "MR#",
+      "Carton",
+      "Box",
+      "SCT Ship No"
+    ],
+    "quantity_columns": [
+      "Q'ty",
+      "Qty",
+      "Quantity",
+      "Received",
+      "P'kg",
+      "Pkg"
+    ],
+    "warehouse_date_columns": {
+      "DSV Al Markaz": [
+        "Al Markaz",
+        "AlMarkaz",
+        "M1",
+        "Markaz"
+      ],
+      "DSV Indoor": [
+        "Indoor",
+        "M44",
+        "Hauler Indoor"
+      ],
+      "DSV Outdoor": [
+        "Outdoor",
+        "Out"
+      ],
+      "MOSB": [
+        "MOSB"
+      ],
+      "DSV MZP": [
+        "MZP"
+      ],
+      "AGI": [
+        "AGI"
+      ],
+      "DAS": [
+        "DAS"
+      ],
+      "MIR": [
+        "MIR"
+      ],
+      "SHU": [
+        "SHU"
+      ],
+      "Hauler Indoor": [
+        "Hauler Indoor",
+        "Hauler(Indoor)"
+      ],
+      "AAA Storage": [
+        "AAA Storage",
+        "AAA"
+      ]
+    },
+    "status_columns": {
+      "Status_WAREHOUSE": "AK",
+      "Status_SITE": "AL",
+      "Status_Current": "AM",
+      "Status_Location": "AN",
+      "Status_Storage": "AO"
+    }
+  },
+  "transaction_type_mappings": {
+    "IN": {
+      "description": "입고",
+      "conditions": [
+        "incoming > 0",
+        "새로운 위치 도착"
+      ]
+    },
+    "TRANSFER_OUT": {
+      "description": "창고간 이동 출고",
+      "conditions": [
+        "Status_Current = '창고'",
+        "창고 → 창고"
+      ]
+    },
+    "FINAL_OUT": {
+      "description": "현장 배송 출고",
+      "conditions": [
+        "Status_Current = '현장'",
+        "창고 → 현장"
+      ]
+    }
+  },
+  "status_logic": {
+    "Status_WAREHOUSE": "IF(COUNTA(Z2:AE2)>0, 1, 0)",
+    "Status_SITE": "IF(COUNTA(AG2:AJ2)>0, 1, 0)",
+    "Status_Current": "IF(AL2=1,'현장',IF(AK2=1,'창고',''))",
+    "Status_Location": "INDEX/MATCH logic for latest date column",
+    "Status_Storage": {
+      "Indoor": [
+        "DSV Indoor",
+        "DSV Al Markaz",
+        "Hauler Indoor"
+      ],
+      "Outdoor": [
+        "DSV MZP",
+        "DSV Outdoor",
+        "MOSB"
+      ],
+      "Site": [
+        "MIR",
+        "SHU",
+        "DAS",
+        "AGI"
+      ],
+      "dangerous_cargo": [
+        "Dangerous",
+        "aaa storage"
+      ]
+    }
+  },
+  "ontology_hierarchy": {
+    "classes": {
+      "Thing": {
+        "subclasses": [
+          "Event",
+          "Location",
+          "Object"
+        ]
+      },
+      "Event": {
+        "subclasses": [
+          "TransportEvent",
+          "StockSnapshot"
+        ]
+      },
+      "Location": {
+        "subclasses": [
+          "Warehouse",
+          "Site"
+        ]
+      },
+      "Warehouse": {
+        "subclasses": [
+          "IndoorWarehouse",
+          "OutdoorWarehouse",
+          "DangerousCargoWarehouse"
+        ]
+      },
+      "Object": {
+        "subclasses": [
+          "Case",
+          "Item"
+        ]
+      }
+    },
+    "properties": {
+      "object_properties": [
+        "hasLocation",
+        "fromLocation",
+        "toLocation"
+      ],
+      "datatype_properties": [
+        "hasCase",
+        "hasDate",
+        "hasQuantity",
+        "hasTransactionType"
+      ],
+      "annotation_properties": [
+        "rdfs:label",
+        "rdfs:comment"
+      ]
+    }
+  },
+  "sparql_templates": {
+    "latest_stock": "\nPREFIX ex: <{namespace}>\nSELECT ?warehouse ?stock ?date\nWHERE {{\n    ?snapshot rdf:type ex:StockSnapshot ;\n              ex:hasLocation ?warehouse ;\n              ex:hasClosingStock ?stock ;\n              ex:hasDate ?date .\n    {{\n        SELECT ?warehouse (MAX(?date) AS ?maxDate)\n        WHERE {{\n            ?s ex:hasLocation ?warehouse ;\n               ex:hasDate ?date .\n        }}\n        GROUP BY ?warehouse\n    }}\n    FILTER(?date = ?maxDate)\n}}\nORDER BY DESC(?stock)\n",
+    "dangerous_cargo": "\nPREFIX ex: <{namespace}>\nSELECT ?warehouse ?stock\nWHERE {{\n    ?snapshot ex:hasLocation ?warehouse ;\n              ex:hasClosingStock ?stock .\n    ?warehouse rdf:type ex:DangerousCargoWarehouse .\n}}\n",
+    "site_deliveries": "\nPREFIX ex: <{namespace}>\nSELECT ?case ?site ?date ?quantity\nWHERE {{\n    ?event rdf:type ex:TransportEvent ;\n           ex:hasCase ?case ;\n           ex:hasLocation ?site ;\n           ex:hasDate ?date ;\n           ex:hasQuantity ?quantity ;\n           ex:hasTransactionType \"FINAL_OUT\" .\n    ?site rdf:type ex:Site .\n}}\nORDER BY DESC(?date)\n",
+    "transfer_chain": "\nPREFIX ex: <{namespace}>\nSELECT ?case ?from ?to ?date\nWHERE {{\n    ?event rdf:type ex:TransportEvent ;\n           ex:hasCase ?case ;\n           ex:fromLocation ?from ;\n           ex:toLocation ?to ;\n           ex:hasDate ?date ;\n           ex:hasTransactionType \"TRANSFER_OUT\" .\n}}\nORDER BY ?case ?date\n"
   }
 }
